--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -1,4 +1,15 @@
 $header-background: #29313c;
+
 $sidebar-background: #323a45;
 $sidebar-shadow: #222222;
+
 $menu-item-selected: #282e37;
+
+$button-background: #386bf2;
+$button-background-favorite: #ffffff;
+$button-text: #ffffff;
+$botton-favorite-border: #dbe4e7;
+$button-favorite-text: #475364;
+
+$head-title-h2:#475364;
+$head-title-h4: #8ea4b5
