feat: add table

--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -1,4 +1,5 @@
 $header-background: #29313c;
+$main-background: #f4f9fb;
 
 $sidebar-background: #323a45;
 $sidebar-shadow: #222222;
@@ -12,4 +13,9 @@ $botton-favorite-border: #dbe4e7;
 $button-favorite-text: #475364;
 
 $head-title-h2:#475364;
-$head-title-h4: #8ea4b5
+$head-title-h4: #8ea4b5;
+
+$table-title: #475364;
+$table-background: #ffffff;
+
+$table-background-icon: #e8eff1;
