--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,4 +1,7 @@
+@import '../../constants/colors.scss';
+
 .main {
   padding: 1.9rem;
   padding-top: 1.4rem;
+  background-color: $main-background;
 }
