--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -19,3 +19,6 @@ $table-title: #475364;
 $table-background: #ffffff;
 
 $table-background-icon: #e8eff1;
+$table-button-border: #dbe4e7;
+
+$table-none: #a3a9b1;
