--- a/src/components/clients-table/table-row.scss
+++ b/src/components/clients-table/table-row.scss
@@ -2,8 +2,10 @@
 
 .table-row {
   display: grid;
-  //grid-template-columns: 25% 20% 31% 24%;
-  grid-template-columns: 25.5% 19.5% 31.5% 13.5% 10%;
+  position: relative;
+  box-sizing: border-box;
+  width: 100%;
+  grid-template-columns: 25fr 19fr 31fr 13fr 10fr;
   margin-bottom: 1px;
   padding: 0.9rem 1.2rem;
   background-color: $table-background;
@@ -19,6 +21,8 @@
 
   &__avatar {
     margin-right: 0.7rem;
+    width: 40px;
+    height: 40px;
   }
 
   &__icon {
@@ -44,18 +48,27 @@
   }
 
   &__h4 {
-    color: #8ea4b5;
+    color: $head-title-h4;
     font-size: 10px;
     font-weight: 400;
     line-height: 12px;
+    cursor: pointer;
+  }
+
+  &__none {
+    color: $table-none;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 14px;
   }
 
   &__rating {
     text-align: center;
-    color: #8ea4b5;
+    color: $head-title-h4;
     font-size: 10px;
     font-weight: 400;
     line-height: 12px;
+
     img {
       margin-bottom: 0.4rem;
     }
@@ -68,9 +81,9 @@
   &__button {
     width: 36px;
     height: 36px;
-    background-color: white;
+    background-color: $table-background;
     border-radius: 3px;
-    border: 1px solid #dbe4e7;
+    border: 1px solid $table-button-border;
     cursor: pointer;
     margin-left: 5px;
 
