--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,7 +1,10 @@
 @import '../../constants/colors.scss';
 
 .main {
+  position: relative;
+  box-sizing: border-box;
   padding: 1.9rem;
   padding-top: 1.4rem;
   background-color: $main-background;
+  width: 100%;
 }
