--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -1,11 +1,13 @@
-@import '../../constants/colors.scss';
+@import 'constants/colors.scss';
+@import 'constants/variables.scss';
 
 .main {
   position: relative;
   box-sizing: border-box;
-  padding: 1.9rem;
-  padding-top: 1.4rem;
-  background-color: $main-background;
   width: 100%;
-  margin-top: 4.1rem;
+  box-sizing: border-box;
+  padding: 3rem;
+  padding-top: 2rem;
+  margin-top: $header-height;
+  background-color: $main-background;
 }
