--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,12 +1,13 @@
-@import '../../constants/colors.scss';
+@import 'constants/colors.scss';
+@import 'constants/variables.scss';
 
 .sidebar {
   position: fixed;
-  margin-top: 4.1rem;
-  width: 5rem;
-  height: calc(100vh - 4.1rem);
+  margin-top: $header-height;
+  width: $sidebar-width;
+  height: calc(100vh - #{$header-height});
   background: $sidebar-background;
-  box-shadow: inset 0px 15px 10px -15px $sidebar-shadow;
+  box-shadow: inset 0 1.5rem 1rem -1.5rem $sidebar-shadow;
 }
 
 .menu {
@@ -14,22 +15,25 @@
   flex-direction: column;
   align-items: center;
   list-style: none;
-  padding-top: 0.5rem;
+  padding-top: 0.8rem;
 
   &__item {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 2.5rem;
-    width: 3.1rem;
-    margin-top: 0.4rem;
-    margin-bottom: 0.3rem;
+    height: 4rem;
+    width: 5rem;
+    margin: 0.55rem 0;
+    border-radius: $border-radius;
     cursor: pointer;
 
     &--selected {
       background: $menu-item-selected;
-      border-radius: 4px;
       cursor: default;
+    }
+
+    &:hover {
+      background: $menu-item-hover;
     }
   }
 }
