--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -5,6 +5,7 @@
   position: relative;
   box-sizing: border-box;
   width: 100%;
+  min-height: calc(100vh - #{$header-height});
   box-sizing: border-box;
   padding: 3rem;
   padding-top: 2rem;
