feat: add show more button

--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -43,6 +43,8 @@ $table-row-background:                    $palette-white;
 $table-row-button-border:                 $palette-geyser;
 $table-row-bold:                          $palette-river-bed;
 $table-row-icon-background:               $palette-mystic;
+$table-show-more-text:                    $palette-river-bed;
+$table-show-more-background:              $palette-white;
 
 // AddForm component
 $add-form-shadow-background:              $palette-black;
