--- a/src/components/clients/table/clients-table.scss
+++ b/src/components/clients/table/clients-table.scss
@@ -25,4 +25,16 @@
     text-align: left;
     background-color: $table-head-background;
   }
+
+  &__show-more {
+    text-align: center;
+    color: $table-show-more-text;
+    font-size: 1.1rem;
+    font-weight: 700;
+    line-height: 1.1rem;
+    text-transform: uppercase;
+    padding: 1.6rem 2rem 1.3rem 2rem;
+    background-color: $table-show-more-background;
+    cursor: pointer;
+  }
 }
