--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -12,6 +12,7 @@ $palette-black:              #000000;
 $palette-royal-blue:         #386bf2;
 $palette-gray-chateau:       #a3a9b1;
 $palette-mystic:             #dce5ea;
+$palette-chartreuse-yellow:  #dae700;
 
 // Header component
 $header-background:                       $palette-ebony-clay;
@@ -43,6 +44,7 @@ $table-row-background:                    $palette-white;
 $table-row-button-border:                 $palette-geyser;
 $table-row-bold:                          $palette-river-bed;
 $table-row-icon-background:               $palette-mystic;
+$table-row-button-favorite-background:    $palette-chartreuse-yellow;
 $table-show-more-text:                    $palette-river-bed;
 $table-show-more-background:              $palette-white;
 
