refactor: change favorite button color

--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -12,7 +12,7 @@ $palette-black:              #000000;
 $palette-royal-blue:         #386bf2;
 $palette-gray-chateau:       #a3a9b1;
 $palette-mystic:             #dce5ea;
-$palette-chartreuse-yellow:  #dae700;
+$palette-blaze-orange:       #ff5d00;
 
 // Header component
 $header-background:                           $palette-ebony-clay;
@@ -31,7 +31,7 @@ $clients-head-title-text:                     $palette-river-bed;
 $clients-head-subtitle-text:                  $palette-bali-hai;
 $clients-head-button-favorite-border:         $palette-geyser;
 $clients-head-button-no-favorite-background:  $palette-white;
-$clients-head-button-favorite-background:     $palette-chartreuse-yellow;
+$clients-head-button-favorite-background:     $palette-blaze-orange;
 $clients-head-button-favorite-text:           $palette-river-bed;
 $clients-head-button-add-background:          $palette-royal-blue;
 
@@ -45,7 +45,7 @@ $table-row-background:                        $palette-white;
 $table-row-button-border:                     $palette-geyser;
 $table-row-bold:                              $palette-river-bed;
 $table-row-icon-background:                   $palette-mystic;
-$table-row-button-favorite-background:        $palette-chartreuse-yellow;
+$table-row-button-favorite-background:        $palette-blaze-orange;
 $table-show-more-text:                        $palette-river-bed;
 $table-show-more-background:                  $palette-white;
 
