--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -12,7 +12,11 @@ $palette-black:              #000000;
 $palette-royal-blue:         #386bf2;
 $palette-gray-chateau:       #a3a9b1;
 $palette-mystic:             #dce5ea;
+$palette-web-orange:         #ffa800;
 $palette-blaze-orange:       #ff5d00;
+$palette-chartreuse-yellow:  #dae700;
+$palette-atlantis:           #abd02d;
+$palette-limeade:            #67c600;
 
 // Header component
 $header-background:                           $palette-ebony-clay;
