--- a/src/components/clients/table/row/table-row.scss
+++ b/src/components/clients/table/row/table-row.scss
@@ -79,6 +79,10 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.2rem;
+
+    &-item {
+      margin-right: 0.3rem;
+    }
   }
 
   &__buttons {
